--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "compile": "hardhat compile",
     "test": "hardhat test",
+    "test-report": "hardhat coverage --testfiles test/**/*.test.ts",
     "prettier": "npx prettier --write .",
     "style-check": "npx prettier --check .",
     "solhint": "npx solhint -f table contracts/*.sol contracts/**/*.sol contracts/**/**/*.sol",
@@ -24,7 +25,7 @@
       "npx prettier --write"
     ]
   },
-  "license": "ISC",
+  "license": "GPL-3.0",
   "devDependencies": {
     "@ethersproject/providers": "^5.7.2",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
@@ -52,7 +53,7 @@
     "prettier-plugin-solidity": "^1.1.3",
     "solhint": "^3.4.1",
     "solhint-plugin-prettier": "^0.0.5",
-    "solidity-coverage": "^0.8.3",
+    "solidity-coverage": "^0.8.4",
     "ts-node": "^10.9.1",
     "typechain": "^8.2.0",
     "typescript": "^5.1.6"
