--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,5 @@
     "tabWidth": 4,
     "printWidth": 120,
     "singleQuote": false,
-    "bracketSpacing": true,
-    "endOfLine": "auto"
+    "bracketSpacing": true
 }
