--- a/.eslintrc
+++ b/.eslintrc
@@ -3,29 +3,22 @@
         "es2021": true,
         "node": true
     },
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended",
-        "prettier"
-    ],
+    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module"
     },
-    "plugins": [
-        "@typescript-eslint"
-    ],
-    "ignorePatterns": [
-        "*.md"
-    ],
+    "plugins": ["@typescript-eslint"],
+    "ignorePatterns": ["*.md"],
     "rules": {
-        "explicit-module-boundary-types": "off",
         "@typescript-eslint/explicit-module-boundary-types": "off",
         "@typescript-eslint/no-var-requires": "error",
         "@typescript-eslint/no-unused-vars": "off",
         "@typescript-eslint/no-explicit-any": "off",
-        "prefer-destructuring": "off",
-        "prefer-const": "off"
+        "explicit-module-boundary-types": "off",
+        "no-constant-condition": "off",
+        "prefer-const": "off",
+        "prefer-destructuring": "off"
     }
 }
