--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Continuous Integration
+name: unit-tests
 
 on:
     push:
@@ -7,27 +7,6 @@ on:
         branches: [main, dev]
 
 jobs:
-    code-lint:
-        name: Code Lint
-        runs-on: ubuntu-latest
-
-        steps:
-            - uses: actions/checkout@v3
-
-            - uses: actions/setup-node@v3
-              with:
-                  node-version: 18
-                  cache: "yarn"
-
-            - name: Install dependencies
-              run: yarn install --frozen-lockfile
-
-            - name: Style Check
-              run: yarn style-check
-
-            - name: Solhint
-              run: yarn solhint
-
     unit-tests:
         name: Hardhat Unit Tests
         runs-on: ubuntu-latest
@@ -49,5 +28,13 @@ jobs:
             - name: Compile
               run: yarn compile
 
-            - name: Test
-              run: yarn test
+            - name: Test and Coverge
+              run: yarn coverage
+
+            - name: Coveralls
+              uses: coverallsapp/github-action@master
+              with:
+                github-token: ${{ secrets.GITHUB_TOKEN }}
+
+
+
