remove coverage ci

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,13 +28,5 @@ jobs:
             - name: Compile
               run: yarn compile
 
-            - name: Test and Coverge
-              run: yarn coverage
-
-            - name: Coveralls
-              uses: coverallsapp/github-action@master
-              with:
-                github-token: ${{ secrets.GITHUB_TOKEN }}
-
-
-
+            - name: Test
+              run: yarn test
